--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Create custom commands using plain-old functions",
   "main": "index.js",
   "scripts": {
+    "start": "http-server .",
     "test": "cypress run"
   },
   "repository": {
@@ -28,6 +29,11 @@
   },
   "homepage": "https://github.com/NicholasBoll/cypress-pipe#readme",
   "devDependencies": {
-    "cypress": "^2.1.0"
+    "cypress": "^3.1.0",
+    "http-server": "^0.11.1"
+  },
+  "scripts": {
+    "start": "http-server . -p 3333",
+    "test": "cypress run"
   }
 }
