--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Create custom commands using plain-old functions",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run"
+    "start": "http-server . -p 3333",
+    "test": "concurrently -k 'npm run start' 'wait-on http://localhost:3333 && cypress run'"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,9 @@
   },
   "homepage": "https://github.com/NicholasBoll/cypress-pipe#readme",
   "devDependencies": {
-    "cypress": "^2.1.0"
+    "concurrently": "^4.0.1",
+    "cypress": "^3.1.0",
+    "http-server": "^0.11.1",
+    "wait-on": "^3.1.0"
   }
 }
