--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server . -p 3333",
-    "test": "concurrently -k 'npm run start' 'wait-on http://localhost:3333 && cypress run'"
+    "test": "concurrently -k --success first 'npm run start' 'wait-on http://localhost:3333 && cypress run'"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/NicholasBoll/cypress-pipe#readme",
   "devDependencies": {
-    "concurrently": "^4.0.1",
-    "cypress": "^3.1.0",
+    "concurrently": "^4.1.0",
+    "cypress": "^3.2.0",
     "http-server": "^0.11.1",
     "wait-on": "^3.1.0"
   }
