--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Create custom commands using plain-old functions",
   "main": "index.js",
   "scripts": {
-    "start": "http-server . -p 3333",
-    "test": "concurrently -k --success first 'npm run start' 'wait-on http://localhost:3333 && cypress run'"
+    "test": "cypress run'"
   },
   "repository": {
     "type": "git",
@@ -29,9 +28,6 @@
   },
   "homepage": "https://github.com/NicholasBoll/cypress-pipe#readme",
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "cypress": "^3.2.0",
-    "http-server": "^0.11.1",
-    "wait-on": "^3.1.0"
+    "cypress": "^3.8.1"
   }
 }
