--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 resources:
   containers:
   - container: dev1
-    image: cypress/base:8
+    image: cypress/base:12
 jobs:
 - job: job_container
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: dev1
   steps:
   - script: printenv
